next done/vpc.tf
/*resource "aws_vpc" "web_vpc" {
  cidr_block = "192.168.100.0/24"
  enable_dns_hostnames = true

  tags = {
    Name = "VPC"
  }
}
*/
